fix spacing and font size

--- a/frontend/projects/shared/styles/shared.scss
+++ b/frontend/projects/shared/styles/shared.scss
@@ -5,6 +5,7 @@ body {
   -moz-user-select: text;
   -ms-user-select: text;
   user-select: text;
+  font-size: 1rem !important;
 }
 
 ion-input {
